--- a/index.html
+++ b/index.html
@@ -771,6 +771,13 @@
                         <div class="item-meta"><span class="item-badge">USB</span><span class="item-badge">HERRAMIENTA</span></div>
                         <a href="https://etcher.balena.io/" class="download-btn" target="_blank"><i class="fa-solid fa-download"></i> Sitio Oficial</a>
                     </div>
+                    <!-- Discord XP -->
+                    <div class="content-item">
+                        <div class="item-header"><div class="item-icon"><i class="fa-brands fa-discord"></i></div><div><h3 class="item-title">Discord XP</h3></div></div>
+                        <p class="item-description">Un cliente para Discord para Windows XP, lo mas optimizado posible para que corra en hardware viejo.</p>
+                        <div class="item-meta"><span class="item-badge">SOCIAL</span><span class="item-badge">PORT XP</span></div>
+                        <a href="https://www.mediafire.com/file/zc6ebqz8p7z0p4m/discord-xpedition-x86-32.zip/file" class="download-btn" target="_blank"><i class="fa-solid fa-download"></i> Descargar</a>
+                    </div>
                     <!-- ShareX -->
                     <div class="content-item">
                         <div class="item-header"><div class="item-icon"><i class="fa-solid fa-camera"></i></div><div><h3 class="item-title">ShareX</h3></div></div>
