--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FoxWeb</title>
+    <title>Cargando...</title>
     
     <meta name="description" content="FoxWeb es tu centro de descargas confiable para software optimizado, sistemas operativos, juegos y utilidades.">
     <meta property="og:title" content="FoxWeb | Centro de Descargas">
