--- a/main.html
+++ b/main.html
@@ -2030,7 +2030,7 @@ window.addEventListener('beforeinstallprompt', (e) => {
                 installButton.style.display = 'none';
                 
                 // Mostrar mensaje de éxito
-                showInstallMessage('¡FoxWeb instalado! 🎉');
+                showInstallMessage('¡FoxWeb instalado!');
             } else {
                 console.log('Usuario rechazó la instalación');
             }
@@ -2047,7 +2047,7 @@ window.addEventListener('appinstalled', () => {
     }
     
     // Mostrar mensaje de bienvenida
-    showInstallMessage('¡Gracias por instalar FoxWeb! 🦊');
+    showInstallMessage('¡Gracias por instalar FoxWeb!');
 });
 
 // Mostrar mensaje de instalación
