--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cargando...</title>
-    
+    <script defer src="/_vercel/insights/script.js"></script>
     <meta name="description" content="FoxWeb es tu centro de descargas confiable para software optimizado, sistemas operativos, juegos y utilidades.">
     <meta property="og:title" content="FoxWeb | Centro de Descargas">
     <meta property="og:description" content="Software optimizado, sistemas operativos, juegos y utilidades. Enlaces directos y duraderos.">
