--- a/main.html
+++ b/main.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <script defer src="/_vercel/insights/script.js"></script>
     <!-- CDN Verification -->
     <link rel="preconnect" href="https://foxorange224.github.io">
     <link rel="dns-prefetch" href="https://foxorange224.github.io">
