--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <link rel="icon" href="https://i.imgur.com/5JzgCvZ.png" type="image/png">
 </head>
 <body>
-    <script>
-        window.location.replace("https://foxweb.vercel.app/main.html");
+    La pagina no esta disponible en este momento, esta en estado de mantenimiendo, no tardaremos tanto.
+   <script>
+       /* window.location.replace("https://foxweb.vercel.app/main.html"); */
     </script>
 <script defer src="https://va.vercel-scripts.com/v1/speed-insights/script.js"></script>
 </body>
