--- a/main.html
+++ b/main.html
@@ -11,6 +11,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FoxWeb | Descarga Software Gratis, Sistemas Operativos y Juegos</title>
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="https://i.imgur.com/5JzgCvZ.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://i.imgur.com/5JzgCvZ.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://i.imgur.com/5JzgCvZ.png">
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#FF4500">
     <meta name="description" content="FoxWeb: Centro de descargas confiable. Software esencial, Linux, Windows, juegos clásicos y APKs. Descargas directas, seguras y actualizadas.">
     <meta property="og:title" content="FoxWeb | Descarga Gratis Software, Sistemas y Juegos">
     <meta property="og:description" content="Centro de descargas con software esencial, sistemas operativos Linux, juegos retro y utilidades. Enlaces directos y verificados.">
