--- a/main.html
+++ b/main.html
@@ -11,6 +11,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FoxWeb | Descarga Software Gratis, Sistemas Operativos y Juegos</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
     
     <link rel="apple-touch-icon" sizes="180x180" href="https://i.imgur.com/5JzgCvZ.png">
     <link rel="icon" type="image/png" sizes="32x32" href="https://i.imgur.com/5JzgCvZ.png">
