--- a/main.html
+++ b/main.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#FF4500">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <meta name="msapplication-TileColor" content="#FF4500">
+    <meta name="msapplication-config" content="/browserconfig.xml">
     <meta name="theme-color" content="#FF4500">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="FoxWeb">
-    <link rel="apple-touch-icon" href="https://i.imgur.com/5JzgCvZ.png">
-    <link rel="apple-touch-startup-image" href="https://i.imgur.com/qfsMx7V.png">
-    <link rel="manifest" href="manifest.json">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FoxWeb | Descarga Software Gratis, Sistemas Operativos y Juegos</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
     
-    <link rel="apple-touch-icon" sizes="180x180" href="https://i.imgur.com/5JzgCvZ.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://i.imgur.com/5JzgCvZ.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://i.imgur.com/5JzgCvZ.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="FoxWeb">
+    <link rel="apple-touch-startup-image" href="/apple-touch-icon.png">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#FF4500">
     <meta name="description" content="FoxWeb: Centro de descargas confiable. Software esencial, Linux, Windows, juegos clásicos y APKs. Descargas directas, seguras y actualizadas.">
