--- a/index.html
+++ b/index.html
@@ -995,6 +995,8 @@ body::before {
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9082337258272819" crossorigin="anonymous"></script>
 </head>
 
+<script src="https://foxorange224.github.io/data.js"></script>
+
 <body>
 <!-- Header -->
 <div class="header-container">
