Update FoxWeb Fixed

--- a/index.html
+++ b/index.html
@@ -995,7 +995,7 @@ body::before {
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9082337258272819" crossorigin="anonymous"></script>
 </head>
 
-<script src="https://foxorange224.github.io/data.js"></script>
+<script src="data.js"></script>
 
 <body>
 <!-- Header -->
