--- a/index.html
+++ b/index.html
@@ -1397,7 +1397,7 @@ body::before {
 
 <!-- Floating Button -->
  <button onclick="openModal('sugerenciaModal')" class="floating-suggest-btn" title="Sugerir contenido"><i class="fa-solid fa-plus"></i></button>
- <button href="https://foxweb.vercel.app/chat.html" target="_blank" class="floating-suggest-btn" title="Ir al Chat"><i class="fa-solid fa-paper-plane"></i></button>
+ <button href="https://foxweb.vercel.app/chat.html" target="_blank" title="Ir al Chat"><i class="fa-solid fa-paper-plane"></i></button>
 
 <!-- Footer -->
 <p class="footer-text">© Copyright 2025 FoxOrange224 | FoxWeb - Tu centro de descargas confiable</p>
