--- a/2026.html
+++ b/2026.html
@@ -548,6 +548,7 @@ textarea.form-input {
     <div class="countdown-message" id="countdownMessage">
       <i class="fas fa-clock"></i> ¡Pronto comenzará un nuevo año lleno de oportunidades!
     </div>
+    <h2><a href="https://foxweb.vercel.app/chat.html">¡Chatea aqui con los de FoxOrange!</a></h2>
   </div>
 </section>
 
