--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="google-adsense-account" content="ca-pub-9082337258272819">
 <title>FoxWeb | Centro de Descargas Confiable de Software Gratis</title>
 <meta name="description" content="FoxWeb: Tu centro de descargas confiable con software esencial gratis, sistemas Linux optimizados, juegos clásicos y APKs seguras. Descargas directas y verificadas.">
-<meta name="keywords" content="descargas gratis software, programas PC gratuitos, Linux descargas, juegos retro, APKs seguras, utilidades Windows, optimización PC, sistemas operativos">
+<meta name="keywords" content="FoxOrange224, UCRv3ZZXkuPXaKSe588W1L9A, Linux, Geometry Dash, Computación, descargas gratis software, programas PC gratuitos, Linux descargas, juegos retro, APKs seguras, utilidades Windows, optimización PC, sistemas operativos">
 <meta name="theme-color" content="#FF4500">
 <meta name="author" content="FoxOrange224">
 <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
