--- a/index.html
+++ b/index.html
@@ -32,15 +32,12 @@
 <meta name="twitter:creator" content="@FoxOrange224">
 <script type="application/ld+json">
 {"@context":"https://schema.org","@type":"WebSite","name":"FoxWeb - Centro de Descargas","url":"https://foxweb.vercel.app","description":"Centro de descargas confiable con software esencial, sistemas operativos, juegos clásicos y utilidades para PC y móviles","potentialAction":{"@type":"SearchAction","target":{"@type":"EntryPoint","urlTemplate":"https://foxweb.vercel.app#Programas?q={search_term_string}"},"query-input":"required name=search_term_string"},"publisher":{"@type":"Organization","name":"FoxWeb","logo":{"@type":"ImageObject","url":"https://i.imgur.com/PY9NKjr.png","width":512,"height":512}},"inLanguage":"es-ES","isAccessibleForFree":true,"license":"https://creativecommons.org/licenses/by-nc-sa/4.0/"}</script>
-<link rel="icon" type="image/png" sizes="32x32" href="https://i.imgur.com/TGNAk1M.png">
-<link rel="icon" type="image/png" sizes="16x16" href="https://i.imgur.com/TGNAk1M.png">
-<link rel="apple-touch-icon" sizes="180x180" href="https://i.imgur.com/TGNAk1M.png">
-<link rel="apple-touch-icon" sizes="152x152" href="https://i.imgur.com/TGNAk1M.png">
-<link rel="apple-touch-icon" sizes="120x120" href="https://i.imgur.com/TGNAk1M.png">
-<link rel="apple-touch-icon" sizes="76x76" href="https://i.imgur.com/TGNAk1M.png">
-<link rel="apple-touch-icon" href="https://i.imgur.com/TGNAk1M.png">
-<link rel="mask-icon" href="https://i.imgur.com/TGNAk1M.png" color="#FF4500">
-<link rel="manifest" href="manifest.json">
+<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+<meta name="apple-mobile-web-app-title" content="FoxWeb" />
+<link rel="manifest" href="/site.webmanifest" />
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="apple-mobile-web-app-title" content="FoxWeb">
