--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <link rel="shortcut icon" href="/favicon.ico" />
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 <meta name="apple-mobile-web-app-title" content="FoxWeb" />
-<link rel="manifest" href="/site.webmanifest" />
+<link rel="manifest" href="/manifest.json" />
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="application-name" content="FoxWeb">
