--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 <meta property="og:title" content="FoxWeb | Descarga Software Gratis, Sistemas y Juegos">
 <meta property="og:description" content="Centro de descargas con software esencial, sistemas operativos Linux, juegos retro y utilidades. Enlaces directos y verificados.">
-<meta property="og:url" content="https://foxweb.vercel.app">
+<meta property="og:url" content="https://foxweb.pages.dev/">
 <meta property="og:type" content="website">
 <meta property="og:image" content="https://i.imgur.com/PY9NKjr.png">
 <meta property="og:image:alt" content="Logo de FoxWeb - Centro de descargas">
@@ -27,7 +27,7 @@
 <meta name="twitter:site" content="@FoxOrange224">
 <meta name="twitter:creator" content="@FoxOrange224">
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","name":"FoxWeb - Centro de Descargas","url":"https://foxweb.vercel.app","description":"Centro de descargas confiable con software esencial, sistemas operativos, juegos clásicos y utilidades para PC y móviles","potentialAction":{"@type":"SearchAction","target":{"@type":"EntryPoint","urlTemplate":"https://foxweb.vercel.app#Programas?q={search_term_string}"},"query-input":"required name=search_term_string"},"publisher":{"@type":"Organization","name":"FoxWeb","logo":{"@type":"ImageObject","url":"https://i.imgur.com/PY9NKjr.png","width":512,"height":512}},"inLanguage":"es-ES","isAccessibleForFree":true,"license":"https://creativecommons.org/licenses/by-nc-sa/4.0/"}</script>
+{"@context":"https://schema.org","@type":"WebSite","name":"FoxWeb - Centro de Descargas","url":"https://foxweb.pages.dev/","description":"Centro de descargas confiable con software esencial, sistemas operativos, juegos clásicos y utilidades para PC y móviles","potentialAction":{"@type":"SearchAction","target":{"@type":"EntryPoint","urlTemplate":"https://foxweb.pages.dev/#Programas?q={search_term_string}"},"query-input":"required name=search_term_string"},"publisher":{"@type":"Organization","name":"FoxWeb","logo":{"@type":"ImageObject","url":"https://i.imgur.com/PY9NKjr.png","width":512,"height":512}},"inLanguage":"es-ES","isAccessibleForFree":true,"license":"https://creativecommons.org/licenses/by-nc-sa/4.0/"}</script>
 <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <link rel="shortcut icon" href="/favicon.ico" />
@@ -918,7 +918,5 @@ Donar con PayPal
 <div id="modales-container"></div>
 <script src="data.js" defer></script>
 <script src="index.js" defer></script>
-<script defer src="https://va.vercel-scripts.com/v1/speed-insights/script.js"></script>
-<style>.sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0;}</style>
 </body>
 </html>
