--- a/index.html
+++ b/index.html
@@ -337,9 +337,9 @@ Sugerir Contenido
 <button class="floating-btn collaborators-btn" onclick="openModal('collaboratorsModal')" aria-label="Ver colaboradores del proyecto" title="Colaboradores">
 <i class="fa-solid fa-users" aria-hidden="true"></i>
 </button>
-<button class="floating-btn chat-btn" href="/chat" aria-label="Abrir chat de FoxWeb" title="Chat FoxWeb">
+<a class="floating-btn chat-btn" href="/chat" aria-label="Abrir chat de FoxWeb" title="Chat FoxWeb">
 <i class="fa-solid fa-message" aria-hidden="true"></i>
-</button>
+</a>
 <button class="floating-btn upload-btn" onclick="openModal('sugerenciaModal')" aria-label="Sugerir contenido nuevo" title="Sugerir contenido">
 <i class="fa-solid fa-cloud-upload-alt" aria-hidden="true"></i>
 </button>
